Bug 1584035 - Don't apply scroll anchoring adjustments if we have an ongoing APZ smooth scroll. r=dholbert

Same case as the other smooth-scrolling thingies, scroll anchoring is less
prioritary (and is disturbing) in that case.

Also fix the logging code (`WritingMode::DebugString` is no longer a thing).

Differential Revision: https://phabricator.services.mozilla.com/D62050